--- a/Bulbulia_Biola_Talk_EcologyReligion_Jan2021.Rmd
+++ b/Bulbulia_Biola_Talk_EcologyReligion_Jan2021.Rmd
@@ -6,7 +6,7 @@ date: "Biola Jan 9 2021"
 output:
   ioslides_presentation:
     # logo: logo2.png
-    incremental: yes
+    incremental: no
     widescreen: yes
     smaller: yes
     font_adjustment: -1
@@ -184,34 +184,34 @@ es_r <-
 ```
 
 
-## The New Zealand Attitudes and Values Study
+## The New Zealand Attitudes and Values Study {.build}
 
-  - Planned 20-year longitudinal study, currently in its 11$^{th}$ year.
-    
-  - Postal questionnaire.
-    
+  - Planned 20-year longitudinal study, currently in its 12$^{th}$ year.
+  
   - Sample frame drawn randomly from NZ Electoral Roll.
+
+  - Postal questionnaire (coverage; retention ~ 80%)
     
-  - Large multidisciplinary research team.
+  - Large multidisciplinary research team (40 +)
     
-  - Focus on personality, social attitudes, values, religion, adult character development, identity, employment, experiences of discrimination, well-being and health, and environmental attitudes ...
+  - Focus on rpersonality, social attitudes, values, **religion**, **meaning-making**, **perfectionism**, **virtue**, employment, experiences of discrimination, physical and psychological health, and environmental attitudes ...
     
   - Current sample contains > 42,000 unique people, or 1.45% of the adult NZ population.
     
   - Here, we will draw on repsonses from *N* = 26,790 longitudinal participants who responded to two or more waves from 2009 -- 2018
 
 
-## We investigate the following beliefs
+## We investigate the following beliefs {.build}
 
-  1. Climate change: (a) is real (b) is human caused
+  1. Climate beliefs: climate change: (a) is real (b) is human caused
   
   2. Climate concern
   
-  3. Beliefs that my behaviour can make protect the environment
+  3. Beliefs that my behaviour can protect the environment
   
   4. Sacrificial behaviour for the environment 
 
-## Model: within + between person dynamics {.footnotesize}
+## Model: within + between person trends {.footnotesize}
 
 ```{r, include =FALSE, cache = TRUE}
 # for mod equation
@@ -239,7 +239,7 @@ We quantitatively consider:
   4. *Comparative Dynamics*: "How do these trends within/between individuals differ for political and religious commitments
   5. References: 
   - https://easystats.github.io/parameters/reference/demean.html
-  - Bafumi J, Gelman A. 2006. Fitting Multilevel Models When Predictors and Group Effects Correlate. In. Philadelphia, PA: Annual meeting of the American Political Science Association // Bell A, Jones K. 2015. Explaining Fixed Effects: Random Effects Modeling of Time-Series Cross-Sectional and Panel Data. Political Science Research and Methods, 3(1), 133–153. // Bell A, Fairbrother M, Jones K. 2019. Fixed and Random Effects Models: Making an Informed Choice. Quality & Quantity (53); 1051-1074 // Giesselmann M, Schmidt-Catran, AW. 2020. Interactions in fixed effects regression models. Sociological Methods & Research, 1–28. https://doi.org/10.1177/0049124120914934 // Heisig JP, Schaeffer M, Giesecke J. 2017. The Costs of Simplicity: Why Multilevel Models May Benefit from Accounting for Cross-Cluster Differences in the Effects of Controls. American Sociological Review 82 (4): 796–827. // Hoffman L. 2015. Longitudinal analysis: modeling within-person fluctuation and change. New York: Routledge
+  <!-- - Bafumi J, Gelman A. 2006. Fitting Multilevel Models When Predictors and Group Effects Correlate. In. Philadelphia, PA: Annual meeting of the American Political Science Association // Bell A, Jones K. 2015. Explaining Fixed Effects: Random Effects Modeling of Time-Series Cross-Sectional and Panel Data. Political Science Research and Methods, 3(1), 133–153. // Bell A, Fairbrother M, Jones K. 2019. Fixed and Random Effects Models: Making an Informed Choice. Quality & Quantity (53); 1051-1074 // Giesselmann M, Schmidt-Catran, AW. 2020. Interactions in fixed effects regression models. Sociological Methods & Research, 1–28. https://doi.org/10.1177/0049124120914934 // Heisig JP, Schaeffer M, Giesecke J. 2017. The Costs of Simplicity: Why Multilevel Models May Benefit from Accounting for Cross-Cluster Differences in the Effects of Controls. American Sociological Review 82 (4): 796–827. // Hoffman L. 2015. Longitudinal analysis: modeling within-person fluctuation and change. New York: Routledge -->
 </div>
 
 
@@ -667,7 +667,7 @@ Within individuals, increasing religious identification predicts *greater* envir
 <!-- ``` -->
 
 
-## Summary and Questions
+## Summary and Questions {.build}
 
 -  Compared with a decade ago, New Zealanders are substantially (1) more aware (2) more believing of and concerned about climate change.
 
@@ -686,7 +686,7 @@ Within individuals, increasing religious identification predicts *greater* envir
 Substantial information in this dataset and many "natural experiments" -- the devastating Christchurch and Kaikoura earthquakes; the Christchurch mosque shootings; the COVID-19 lockdowns and recovery; several Rugby cup wins and losses; political changes ...  also many events within people -- birth, death, illness, recovery, retirement ...  We'd love to collaborate with you. Please get in touch.
 </div>
 
-## Thanks to
+## Thanks to {.build}
 
 - Dom Johnson, Oxford University, for the idea to look at the social consequences of religion and ecology. 
 
